syntax = "proto3";

package file_service;
option go_package = "quickflow/post_service/internal/delivery/grpc/proto";

import "google/protobuf/timestamp.proto";
import "file_service/file_service.proto";

message Post {
  string id = 1;
  string creator_id = 2;
  string creator_type = 12;
  string description = 3;
  repeated File files = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
  int64 like_count = 8;
  int64 repost_count = 9;
  int64 comment_count = 10;
  bool is_repost = 11;
  bool is_liked = 13;
}

message PostUpdate {
  string id = 1;
  string description = 2;
  repeated File files = 3;
}

message AddPostRequest {
  Post post = 1;
}

message AddPostResponse {
  Post post = 1;
}

message DeletePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message DeletePostResponse {
  bool success = 1;
}

message FetchFeedRequest {
  int32 num_posts = 1;
  google.protobuf.Timestamp timestamp = 2;
  string user_id = 3;
}

message FetchFeedResponse {
  repeated Post posts = 1;
}

message FetchRecommendationsRequest {
  int32 num_posts = 1;
  google.protobuf.Timestamp timestamp = 2;
  string user_id = 3;
}

message FetchRecommendationsResponse {
  repeated Post posts = 1;
}

message FetchUserPostsRequest {
  string user_id = 1;
  int32 num_posts = 2;
  google.protobuf.Timestamp timestamp = 3;
  string requester_id = 4;
}

message FetchUserPostsResponse {
  repeated Post posts = 1;
}

message UpdatePostRequest {
  PostUpdate post = 1;
  string user_id = 2;
}

message UpdatePostResponse {
  Post post = 1;
}

message LikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message LikePostResponse {
  bool success = 1;
}

message UnlikePostRequest {
  string post_id = 1;
  string user_id = 2;
}

message UnlikePostResponse {
  bool success = 1;
}

message GetPostRequest {
  string post_id = 1;
  string user_id = 2;
}

message GetPostResponse {
  Post post = 1;
}

service PostService {
  rpc AddPost(AddPostRequest) returns (AddPostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc FetchFeed(FetchFeedRequest) returns (FetchFeedResponse);
  rpc FetchRecommendations(FetchRecommendationsRequest) returns (FetchRecommendationsResponse);
  rpc FetchUserPosts(FetchUserPostsRequest) returns (FetchUserPostsResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc LikePost(LikePostRequest) returns (LikePostResponse);
  rpc UnlikePost(UnlikePostRequest) returns (UnlikePostResponse);
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
}
